# discord-pagination

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
discord_pagination/: __init__.py  view.py
tests/: test_view.py
